objects/Day_1_Template__c.object
<CustomObject>
    <description>Day 1 Template</description>
    <fields>
        <fullName>Are_Soft_Copies_expected__c</fullName>
        <description>Are_Soft_Copies_expected</description>
        <label>Are Soft Copies expected?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BCMSXMLData__c</fullName>
        <label>BCMSXMLData</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCMS_Client_Id__c</fullName>
        <externalId>true</externalId>
        <label>BCMS Client Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BCMS_Prospect_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>BCMS Prospect Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_On_Boarding__c</fullName>
        <label>Client On-Boarding</label>
        <referenceTo>Client_On_Boarding__c</referenceTo>
        <relationshipLabel>Day 1 Templates</relationshipLabel>
        <relationshipName>Day_1_Templates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Day 1 Templates</relationshipLabel>
        <relationshipName>Day_1_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCC_Approval_for_MSB_Onboarding__c</fullName>
        <label>FCC Approval for MSB on-boarding?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_CIF__c</fullName>
        <label>Group CIF</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <formula>Primary_Legal_Entity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_s__c</fullName>
        <label>Guarantor(s)?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISC_Code__c</fullName>
        <label>ISC Code </label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISC_Description__c</fullName>
        <label>ISC Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - MONETARY AUTHORITY</fullName>
                </value>
                <value>
                    <fullName>2 - BANKS</fullName>
                </value>
                <value>
                    <fullName>2.1 - SOUTH AFRICAN BANKS</fullName>
                </value>
                <value>
                    <fullName>2.2 - SOUTH AFRICAN BRANCHES OF FOREIGN BANKS</fullName>
                </value>
                <value>
                    <fullName>3 - MUTUAL BANKS, POSTBANK AND LAND BANK</fullName>
                </value>
                <value>
                    <fullName>3.1 - MUTUAL BANKS</fullName>
                </value>
                <value>
                    <fullName>3.2 - POST BANK</fullName>
                </value>
                <value>
                    <fullName>3.3 - LAND AND AGRICULTURAL BANK OF SOUTH AFRICA</fullName>
                </value>
                <value>
                    <fullName>4 - PUBLIC INVESTMENT COMMISSIONER (PIC)</fullName>
                </value>
                <value>
                    <fullName>5 - INSURERS AND PENSION FUNDS</fullName>
                </value>
                <value>
                    <fullName>5.1 - INSURERS</fullName>
                </value>
                <value>
                    <fullName>5.2 - PENSION AND PROVIDENT FUNDS</fullName>
                </value>
                <value>
                    <fullName>5.3 - MEDICAL SCHEMES</fullName>
                </value>
                <value>
                    <fullName>6 - OTHER FINANCIAL INSTITUTIONS</fullName>
                </value>
                <value>
                    <fullName>6.1 - UNIT TRUSTS (&quot;GROWTH FUNDS&quot; - OPEN-END)</fullName>
                </value>
                <value>
                    <fullName>6.2 - PARTICIPATION MORTGAGE BOND SCHEMES</fullName>
                </value>
                <value>
                    <fullName>6.3 - FINANCE COMPANIES</fullName>
                </value>
                <value>
                    <fullName>6.4 - PUBLIC SECTOR INTERMEDIARIES (FINANCIAL)</fullName>
                </value>
                <value>
                    <fullName>6.5 - FINANCIAL AUXILIARIES</fullName>
                </value>
                <value>
                    <fullName>6.5.1 - BOND EXCHANGE OF SOUTH AFRICA (BESA)</fullName>
                </value>
                <value>
                    <fullName>6.5.2 - JOHANNESBURG STOCK EXCHANGE (JSE)</fullName>
                </value>
                <value>
                    <fullName>6.5.3 - SOUTH AFRICAN FUTURES EXCHANGE (SAFEX)</fullName>
                </value>
                <value>
                    <fullName>6.5.4 - SAFEX: AGRICULTURAL MARKETS DIVISON</fullName>
                </value>
                <value>
                    <fullName>6.5.5 - TRUST COMPANIES</fullName>
                </value>
                <value>
                    <fullName>6.5.6 - INSURANCE BROKERS OR AGENTS AND ACTUARIES</fullName>
                </value>
                <value>
                    <fullName>6.5.7 - SA REPRESENTATIVE OFFICES OF FOREIGN BANKS</fullName>
                </value>
                <value>
                    <fullName>6.5.8 - OTHER PORTFOLIO OR FUND MANAGERS, NOT INCLUDED ELSEWHERE</fullName>
                </value>
                <value>
                    <fullName>6.6 - FINANCIAL CONTROLLING COMPANIES</fullName>
                </value>
                <value>
                    <fullName>6.6.1 - BANK CONTROLLING COMPANIES</fullName>
                </value>
                <value>
                    <fullName>6.6.2 - OTHER FINANCIAL CONTROLLING COMPANIES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instant_Account_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instant Account Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_client_a_MSB__c</fullName>
        <label>Is the client a MSB?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_client_a_NBFI__c</fullName>
        <label>Is the client a NBFI?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_client_a_SPV__c</fullName>
        <description>NB - The label is different to that of the API name</description>
        <label>Is the client an SPV?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_client_an_Associated_Party__c</fullName>
        <label>Is the client an Associated Party?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity_Code__c</fullName>
        <label>Legal Entity Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Type__c</fullName>
        <label>Legal Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Natural Persons</fullName>
                </value>
                <value>
                    <fullName>Legal Entity / Persons</fullName>
                </value>
                <value>
                    <fullName>Sureties</fullName>
                </value>
                <value>
                    <fullName>Other Legal Enitites</fullName>
                </value>
                <value>
                    <fullName>Other Persons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Legal_Entity_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Close Corporations</fullName>
                </value>
                <value>
                    <fullName>Close Corporations (Surety)</fullName>
                </value>
                <value>
                    <fullName>Co-Operatives</fullName>
                </value>
                <value>
                    <fullName>Co-Operatives (Surety)</fullName>
                </value>
                <value>
                    <fullName>Correspondent Bank</fullName>
                </value>
                <value>
                    <fullName>Deceased Estates</fullName>
                </value>
                <value>
                    <fullName>Deceased Estates (Surety)</fullName>
                </value>
                <value>
                    <fullName>External Companies</fullName>
                </value>
                <value>
                    <fullName>External Companies (Surety)</fullName>
                </value>
                <value>
                    <fullName>Foreign Companies</fullName>
                </value>
                <value>
                    <fullName>Foreign Companies (Surety)</fullName>
                </value>
                <value>
                    <fullName>Individual - Foreign Nationals</fullName>
                </value>
                <value>
                    <fullName>Individual - Foreign Nationals (Surety)</fullName>
                </value>
                <value>
                    <fullName>Individual - Minors - Foreign Nationals</fullName>
                </value>
                <value>
                    <fullName>Individual - Minors - Foreign Nationals (Surety)</fullName>
                </value>
                <value>
                    <fullName>Individual - Minors - South African Citizens and Residents</fullName>
                </value>
                <value>
                    <fullName>Individual - Minors - South African Citizens and Residents (Surety)</fullName>
                </value>
                <value>
                    <fullName>Individual - South African Citizens and Residents</fullName>
                </value>
                <value>
                    <fullName>Individual - South African Citizens and Residents (Surety)</fullName>
                </value>
                <value>
                    <fullName>Informal Bodies</fullName>
                </value>
                <value>
                    <fullName>Informal Bodies (Surety)</fullName>
                </value>
                <value>
                    <fullName>Insurance, Banks and Other Financial Institutions</fullName>
                </value>
                <value>
                    <fullName>Insurance, Banks and Other Financial Institutions (Surety)</fullName>
                </value>
                <value>
                    <fullName>Joint and Several</fullName>
                </value>
                <value>
                    <fullName>Joint and Several (Surety)</fullName>
                </value>
                <value>
                    <fullName>Non-Government Organisations (NGO&apos;s)</fullName>
                </value>
                <value>
                    <fullName>Non-Government Organisations (NGO&apos;s) (Surety)</fullName>
                </value>
                <value>
                    <fullName>Organs of State and Institutions of Higher Learning</fullName>
                </value>
                <value>
                    <fullName>Organs of State and Institutions of Higher Learning (Surety)</fullName>
                </value>
                <value>
                    <fullName>Other Non-Resident Entities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MI_Flag_Code__c</fullName>
        <label>MI Flag Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MI_Flag__c</fullName>
        <label>MI Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIB ABCap</fullName>
                </value>
                <value>
                    <fullName>CIB Corporate</fullName>
                </value>
                <value>
                    <fullName>COVERAGE</fullName>
                </value>
                <value>
                    <fullName>EAST AFRICA CLIENT</fullName>
                </value>
                <value>
                    <fullName>FINANCIAL INSTITUTION</fullName>
                </value>
                <value>
                    <fullName>MARKETS</fullName>
                </value>
                <value>
                    <fullName>Midcorp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Client_s_address__c</fullName>
        <formula>Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Client’s address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Legal_Entity__c</fullName>
        <label>Primary Legal Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Day 1 Templates</relationshipLabel>
        <relationshipName>Day_1_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <formula>Primary_Legal_Entity__r.Registration_Number__c</formula>
        <label>Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <label>SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Code__c</fullName>
        <label>Site Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Sent to ESP</fullName>
                </value>
                <value>
                    <fullName>Case Created</fullName>
                </value>
                <value>
                    <fullName>Details Updated</fullName>
                </value>
                <value>
                    <fullName>Client Status Screened</fullName>
                </value>
                <value>
                    <fullName>Instructions Submitted</fullName>
                </value>
                <value>
                    <fullName>Client Risk Profiled</fullName>
                </value>
                <value>
                    <fullName>Attestation Data Confirmation Required</fullName>
                </value>
                <value>
                    <fullName>Attestation Data Confirmed</fullName>
                </value>
                <value>
                    <fullName>Attestation Data Declined</fullName>
                </value>
                <value>
                    <fullName>Case Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Group_Structure__c</fullName>
        <label>Submit Group Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_is_the_MD_CEO__c</fullName>
        <formula>Contact__r.Owner.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Who is the MD/CEO?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_interest_rates_and_charges_apply__c</fullName>
        <label>Will interest rates and charges apply?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cdosp__c</fullName>
        <description>Contact_Details_of_Strategic_Person</description>
        <formula>spccn__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Details of Strategic Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dosp2__c</fullName>
        <description>Designation_of_Strategic_Person</description>
        <formula>spccn__r.Job_title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Designation of Strategic Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dosp__c</fullName>
        <label>Designation of Strategic Person</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MANAGER</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR</fullName>
                </value>
                <value>
                    <fullName>ACCOUNTANT</fullName>
                </value>
                <value>
                    <fullName>SECRETARY</fullName>
                </value>
                <value>
                    <fullName>TRUSTEE</fullName>
                </value>
                <value>
                    <fullName>CHAIRMAN</fullName>
                </value>
                <value>
                    <fullName>LIQUIDATOR</fullName>
                </value>
                <value>
                    <fullName>PRESIDENT</fullName>
                </value>
                <value>
                    <fullName>CURATOR</fullName>
                </value>
                <value>
                    <fullName>TREASURER</fullName>
                </value>
                <value>
                    <fullName>PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>PARTNER</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRATOR</fullName>
                </value>
                <value>
                    <fullName>TOWNCLERK</fullName>
                </value>
                <value>
                    <fullName>MEMBER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dosp_code__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Person Designation Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eafsc__c</fullName>
        <description>Email_Address_for_Soft_Copies</description>
        <label>Email Address for Soft Copies</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eaosp__c</fullName>
        <description>Email_Address_of_Strategic_Person</description>
        <formula>spccn__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Address of Strategic Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hota__c</fullName>
        <description>Head_office_trading_address__c</description>
        <formula>Primary_Legal_Entity__r.BillingStreet + &apos;, &apos; +  Primary_Legal_Entity__r.BillingCity + &apos;, &apos; + Primary_Legal_Entity__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Head office trading address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itcaib__c</fullName>
        <description>Is_the_client_an_Introducer_Broker</description>
        <label>Is the client an Introducer Broker?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>itcboap__c</fullName>
        <description>Is_the_client_being_on_boarded_a_primary</description>
        <label>What is the client being on-boarded as ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Client</fullName>
                </value>
                <value>
                    <fullName>CounterParty</fullName>
                </value>
                <value>
                    <fullName>Underlying Client</fullName>
                </value>
                <value>
                    <fullName>Disclosed Principal</fullName>
                </value>
                <value>
                    <fullName>None of the Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nobbt__c</fullName>
        <description>Nature_of_Business_Business_Type__c</description>
        <label>Nature of Business / Business Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pcpoeg__c</fullName>
        <description>Primary_client_part_of_existing_group</description>
        <formula>IF(ISNULL(Primary_Legal_Entity__r.ParentId),&quot;No&quot;,&quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary client part of existing  group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppcwbt__c</fullName>
        <description>Products_primary_client_will_be_taking__c</description>
        <label>Products primary client will be taking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spccn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Strategic_Person_Client_Contact_Name</description>
        <label>Strategic Person (Client Contact Name)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Day 1 Templates (Strategic Person (Client Contact Name))</relationshipLabel>
        <relationshipName>Day_1_Templates2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>weec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who_exercises_executive_control</description>
        <label>Who exercises executive control?</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Day 1 Templates (Who exercises executive control?)</relationshipLabel>
        <relationshipName>Day_1_Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wex4cert__c</fullName>
        <label>Will there be an Exempt. 4 certificate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Day 1 Template</label>
    <nameField>
        <displayFormat>D1T{00000}</displayFormat>
        <label>Day 1 Template Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Day 1 Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>